codex-tests/snapshots/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__declined_tool_suggestion.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: normalize_snapshot_paths(popup)
---
› Ask Mightling to do anything

  GPT-5.6-Sol default · /tmp/project
