codex-tests/snapshots/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__default_footer_generating_thread_title.snap
---
source: tui/src/chatwidget/tests/terminal_title.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 100))"
---
› Ask Puffin to do anything

  GPT-5.6-Sol default · /tmp/project · ⠋
